--- a/weather-app/src/app/styles/page.module.css
+++ b/weather-app/src/app/styles/page.module.css
@@ -1,4 +1,4 @@
-.searchSuggestions {
+/* .searchSuggestions {
   position: absolute;
   top: 180px;
   left: 40px;
@@ -11,8 +11,8 @@
   border: 1px solid grey;
   border-radius: 1000px;
   z-index: 3;
-}
-
+} */
+/* 
 .portrayDay {
   grid: 1 / 1;
   background-color: #f3f4f6;
@@ -22,16 +22,16 @@
   width: 100%;
   grid: 1 / 2;
   background-color: #0f141e;
-}
+} */
 
-.searchIcon {
+/* .searchIcon {
   position: relative;
   width: 50px;
-}
+} */
 
 .weatherInfoRendering {
   width: 414px;
-  height: 830px;
+  height: 700px;
   border: 8px solid white;
   border-radius: 50px;
   display: flex;
@@ -39,24 +39,36 @@
   justify-content: center;
   text-align: center;
   position: relative;
-  left: 50%;
-  transform: translateX(-50%);
-  top: 215px;
   box-shadow: 0px 0px 20px orange;
   backdrop-filter: blur(24px);
   z-index: 1;
 }
 .randomOrange {
   position: absolute;
-  top: 177px;
-  left: 350px;
+  top: 150px;
+  left: 300px;
   width: 128px;
   height: 128px;
   border-radius: 50%;
-  /* border: 1px solid black; */
   background-color: #ff8e27;
   /* background-blend-mode: overlay;
   background: radial-gradient(
+    rgba(255, 255, 255, 0.35) 0%,
+    rgba(255, 255, 255, 0) 100%
+  ); */
+}
+
+.randomPurple {
+  position: absolute;
+  bottom: 150px;
+  right: 300px;
+  width: 128px;
+  height: 128px;
+  border-radius: 50%;
+  background-color: #6e72c9;
+  /* background-blend-mode: overlay;
+  background: radial-gradient(
+    50% 50% at 50% 50%,
     rgba(255, 255, 255, 0.35) 0%,
     rgba(255, 255, 255, 0) 100%
   ); */
